More work for thermostat device, added generic debouncer helper

--- a/app/src/main/res/layout/thermostat_device_controls.xml
+++ b/app/src/main/res/layout/thermostat_device_controls.xml
@@ -5,10 +5,11 @@
     >
 
     <Spinner
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/mode"
         android:layout_weight="1"
+        android:entries="@array/thermostat_modes"
          />
 
     <ToggleButton
