--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="background_tab_pressed">#6633B5E5</color>
+    <color name="light_blue">#6633B5E5</color>
     <color name="main_color">#33B5E5</color>
     <color name="dark_gray">#888888</color>
 </resources>
